FIX: image overflows set to hidden to show border-radius

--- a/src/components/Showcase/showcase.module.scss
+++ b/src/components/Showcase/showcase.module.scss
@@ -36,6 +36,7 @@
     aspect-ratio: 1 / 1;
     border: solid 4px #fff;
     border-radius: 50%;
+    overflow: hidden;
   }
 
   h1 {
